[package]
name = "picoml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "picoml"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.15.3"
pyo3 = { version = "0.24.0", features = ["abi3"] }
serde = "1.0.219"
uuid = "1.17.0"
