[project]
name = "picoml"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "serde>=0.9.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "picoml._lib"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]
